# ironnest

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  clippy.toml  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: determinism-auditor.md  rust-reviewer.md
.claude/skills/rust-determinism-audit/: SKILL.md
.github/workflows/: ci.yml  supply-chain.yml  wheels.yml
crates/cde/: Cargo.toml
crates/cde/src/: lib.rs
crates/cde/src/collision_detection/: cd_engine.rs  mod.rs
crates/cde/src/collision_detection/hazards/: collector.rs  filter.rs  hazard.rs  mod.rs
crates/cde/src/collision_detection/quadtree/: mod.rs  qt_hazard.rs  qt_hazard_vec.rs  qt_node.rs  qt_partial_hazard.rs  qt_traits.rs
crates/cde/src/entities/: container.rs  instance.rs  item.rs  layout.rs  mod.rs  placed_item.rs
crates/cde/src/io/: export.rs  ext_repr.rs  import.rs  mod.rs
crates/cde/src/probs/: mod.rs
crates/cde/src/probs/bpp/: mod.rs
crates/cde/src/probs/bpp/entities/: bin.rs  instance.rs  mod.rs  problem.rs  solution.rs
crates/cde/src/probs/bpp/io/: export.rs  ext_repr.rs  import.rs  mod.rs
crates/cde/src/probs/bpp/util/: assertions.rs  mod.rs
crates/cde/src/util/: assertions.rs  mod.rs
crates/cde/tests/: cde_smoke.rs
crates/geo/: Cargo.toml
crates/geo/src/: convex_hull.rs  d_transformation.rs  fpa.rs  geo_enums.rs  geo_traits.rs  lib.rs  original_shape.rs  shape_modification.rs  transformation.rs
crates/geo/src/buffer/: NOTICE  mod.rs
crates/geo/src/buffer/skeleton/: mod.rs
crates/geo/src/buffer/util/coordinate/: mod.rs
crates/geo/src/buffer/util/ray/: mod.rs
crates/geo/src/fail_fast/: mod.rs  piers.rs  pole.rs  sp_surrogate.rs
crates/geo/src/primitives/: circle.rs  edge.rs  mod.rs  point.rs  rect.rs  simple_polygon.rs
crates/geo/tests/: geometry.rs
crates/ironnest/: Cargo.toml
crates/ironnest/src/: lib.rs
crates/optimizer/: Cargo.toml
crates/optimizer/examples/: bench.rs  density.rs  seedsweep.rs
crates/optimizer/src/: improve.rs  lib.rs  loss.rs  prng.rs  search.rs
crates/optimizer/src/sep/: evaluator.rs  mod.rs  proxy.rs  search.rs  separator.rs  tracker.rs
crates/optimizer/tests/: golden.rs  nest.rs
crates/optimizer/tests/snapshots/: golden__golden_placements_match_snapshot.snap
crates/py/: Cargo.toml  README.md  pyproject.toml
crates/py/src/: lib.rs
crates/py/tests/: test_ironnest.py
docs/: 00-ironnest-architecture-and-plan.md  01-jagua-source-verification.md  02-optimizer-and-separation-search.md
