[package]
name         = "ironnest"
description   = "Deterministic, embeddable, true-shape 2D nesting engine for irregular parts (placement oracle)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish      = false

[lints]
workspace = true

[dependencies]
ironnest-optimizer = { workspace = true }
