[package]
name         = "ironnest"
description   = "Deterministic, embeddable, true-shape 2D nesting engine for irregular parts (placement oracle)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish      = false

[lints]
workspace = true

[features]
# Forwards to the optimizer's `parallel` feature: run `nest_multistart`'s K constructions on threads
# (byte-identical to sequential — see the optimizer manifest). Off by default; the wheel turns it on.
parallel = ["ironnest-optimizer/parallel"]

[dependencies]
ironnest-optimizer = { workspace = true }
