[package]
name         = "ironnest-optimizer"
description   = "ironnest — deterministic placement search (construction + separation local search)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish      = false

[lints]
workspace = true

[dependencies]
ironnest-cde = { workspace = true }
