[package]
name         = "ironnest-optimizer"
description   = "ironnest — deterministic placement search (construction + separation local search)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish      = false

[lints]
workspace = true

[features]
# `parallel` runs the multi-start (`nest_multistart`) constructions on `std::thread::scope` threads
# instead of sequentially. It is BYTE-IDENTICAL to the sequential path (each start is the independent,
# golden-stable `nest_per_item`; the keep-best reduction runs after all joins in fixed k order, with no
# float sum crossing a thread) — the cross-platform golden run under this feature must match the same
# snapshot. Off by default; std-only, no new dependency. NOTE: this is the ONLY sanctioned threading,
# and only on the multi-start meta-loop — never inside a single placement search (CLAUDE.md).
parallel = []

[dependencies]
ironnest-geo = { workspace = true }
ironnest-cde = { workspace = true }
slotmap   = "1.0"   # deterministic keyed storage — `SecondaryMap` for the separation tracker (matches cde)
# Deliberately NO `rand`/`rand_pcg`: the placement PRNG is a small, self-contained PCG64 (see
# `prng.rs`) so the exact bit-stream is version-independent and byte-stable forever — determinism is
# the product. No threads, no wall-clock, no external RNG.

[dev-dependencies]
# Snapshot harness for the cross-platform determinism golden (Phase 3). Test-only — never in the
# shipped wheel, so it has no bearing on placement determinism. Pure-Rust.
insta = "1"
