[package]
name         = "ironnest-py"
description   = "PyO3 binding — builds the `ironnest` abi3-py313 wheel"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish      = false

# The Python import name is `ironnest`; the artifact is a C-ABI dynamic library.
[lib]
name       = "ironnest"
crate-type = ["cdylib"]

# NB: no `[lints] workspace = true` here — the determinism gate is for the engine crates, and
# pyo3 macro expansion would otherwise risk false positives in the binding layer.

[dependencies]
# The public façade crate (package `ironnest`) — renamed locally to `ironnest_core` so its lib name
# does not clash with THIS crate's `[lib] name = "ironnest"` (the Python import name / abi3 init
# symbol `PyInit_ironnest`).
ironnest_core = { package = "ironnest", path = "../ironnest" }
pyo3 = { workspace = true }
